--- a/views/products.ejs
+++ b/views/products.ejs
@@ -2,33 +2,168 @@
 <html>
   <head>
     <title>product listing api</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"> -->
+    <!-- <link rel='stylesheet' href='/stylesheets/style.css' /> -->
+    <style>
+    body{
+  display: table;
+  width: 100%;
+  background: #FF6347;
+  text-align: center;
+}
+*{ 
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.aa_h2{
+  font:100 5rem/1 Roboto;
+  text-transform: uppercase;
+}
+table{
+   background: #fff;
+}
+table,thead,tbody,tfoot,tr, td,th{
+  text-align: center;
+  margin: auto;
+  border:1px solid #dedede;
+  padding: 1rem;
+  width: 50%;
+}
+a {
+  text-decoration: none;
+}
+.table    { display: table; width: 50%; }
+.tr       { display: table-row;  }
+.thead    { display: table-header-group }
+.tbody    { display: table-row-group }
+.tfoot    { display: table-footer-group }
+.col      { display: table-column }
+.colgroup { display: table-column-group }
+.td, .th   { display: table-cell; width: 50%; }
+.caption  { display: table-caption }
+
+.table,
+.thead,
+.tbody,
+.tfoot,
+.tr,
+.td,
+.th{
+  text-align: center;
+  margin: auto;
+  padding: 1rem;
+}
+.table{
+  background: #fff;
+  margin: auto;
+  border:none;
+  padding: 0;
+  margin-bottom: 5rem;
+}
+
+.th{
+  font-weight: 700;
+  border:1px solid #dedede;
+  &:nth-child(odd){
+    border-right:none;
+  }
+}
+.td{
+  font-weight: 300;
+  border:1px solid #dedede;
+  border-top:none;
+  &:nth-child(odd){
+    border-right:none;
+  }
+}
+
+.aa_htmlTable{
+  background: tomato;
+  padding: 5rem;
+  display: table;
+  width: 100%;
+  height: 100vh;
+  vertical-align: middle;
+}
+.aa_css{
+  background: skyblue;
+  padding: 5rem;
+  display: table;
+  width: 100%;
+  height: 100vh;
+  vertical-align: middle;
+}
+
+.aa_ahmadawais{
+  display: table;
+  width: 100%;
+  font: 100 1.2rem/2 Roboto;
+  margin: 5rem auto;
+}
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+h4 {
+  text-decoration: line-through;
+}
+    </style>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"></div>
-    <h1 class="text-center">Products</h1>
-    </div>
-    </div>
-    <div class="row">
+    <!-- <div class="container"> -->
+      <!-- <div class="row"> -->
+        <!-- <div class="col-md-12"></div> -->
+    <!-- <h1 class="text-center">Products</h1> -->
+    <!-- </div> -->
+    <!-- </div> -->
+    <!-- <div class="row"> -->
+      <h1><font color="white">Recomended Products</font></h1>
       <% products.forEach(function(product){ %>
-        <div class="col-md-4 mb-2">
+
+
+        <!-- <div class="col-md-4 mb-2">
           <div class="card text-center bg-light">
               <div class="card-head">
-
                  <a href="#" onclick="window.open('<%= product.p_productUrl %>');"><img src="<%= product.p_img_small %>"></a>
               </div>
             <div class="card-body">
               <%= product.p_title %>
               <br>
-              <%= product.p_retail_price %>
+              <%= product.selling_price %>
+              <%= product.score%>
             </div>
           </div>
-        </div>
+        </div> -->
+        
+        <table>
+          <tr>
+            <th>
+              <img src="<%= product.p_img_small %>"><br>
+              <%= product.p_title %>
+            </th>
+            <th>
+              <br>
+              <button class="button"><a href="http://127.0.0.1/fetch.php?p_id=<%= product.p_id%>&category=<%= product.p_category%>"><font color="white">View More Info</font></a></button>
+              <br>
+              <%= product.selling_price %> <%= product.selling_price_currency %> 
+              <!-- <h4><%= product.p_retail_price %></h4> -->
+              <br>
+              <%= product.score%>
+            </th>
+          </tr>
+        </table>
     <% }); %>
-    </div>
-  </div>
+    <!-- </div> -->
+  <!-- </div> -->
   </body>
 </html>
