--- a/views/products.ejs
+++ b/views/products.ejs
@@ -153,7 +153,7 @@ h4 {
             </th>
             <th>
               <br>
-              <button class="button"><a href="http://127.0.0.1/fetch.php?p_id=<%= product.p_id%>&category=<%= product.p_category%>"><font color="white">View More Info</font></a></button>
+              <button class="button"><a href="http://127.0.0.1/working/fetch.php?p_id=<%= product.p_id%>&category=<%= product.p_category%>"><font color="white">View More Info</font></a></button>
               <br>
               <%= product.selling_price %> <%= product.selling_price_currency %> 
               <!-- <h4><%= product.p_retail_price %></h4> -->
